# omakai-groundbot

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
missions/: warehouse_loop.json
ros2_ws/: test_ollama.py
ros2_ws/src/omokai_executor/: package.xml  setup.cfg  setup.py
ros2_ws/src/omokai_executor/launch/: mission_executor.launch.py
ros2_ws/src/omokai_executor/omokai_executor/: executor.py  mission.py  mission_generator.py  mission_loader.py  nav_client.py
ros2_ws/src/omokai_executor/omokai_executor/llm/: ollama_client.py  parser.py  prompt.py
scripts/: test_mission_loader.py
